infra/k8s/tasks-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: ezeedge/tasks-app:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata: 
  name: tasks-srv
spec:
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
