infra/k8s/tasks-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-mongo
  template:
    metadata:
      labels:
        app: tasks-mongo
    spec:
      containers:
        - name: tasks-mongo
          image: mongo:6.0
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-mongo-srv
spec:
  selector:
    app: tasks-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
