infra/k8s/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-pw3-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: api.kong.local
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: tasks-srv
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-srv
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-srv
                port:
                  number: 9090
